# core-common

./: CMakeLists.txt  README.md
Config/: AllocatorTraits.h.in  FunctionTraits.h.in  MapOps.h.in  StringOps.h.in  VectorOps.h.in
Include/Entropy/Core/: Log.h
Include/Entropy/Core/Details/: Defines.h  Hash.h  StrongAlias.h  TypeId.h  TypeTraits.h
Include/Entropy/Details/: TypeTraits.h
Src/: Log.cpp  TypeId.cpp
